[package]
name = "raug-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "raug_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
rosc = "0.11.4"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
raug = { path = "../raug" }
raug-ext = { path = "../raug-ext" }
env_logger = "0.11.8"
raug-graph = { path = "../raug-graph" }